tests/should_fail/missing_struct_field.nv
module missing_struct_field
// SHOULD FAIL: struct literal missing required field
struct Person {
    name: String,
    age: Int
}
let p = Person { name: "Alice" }
